// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProblemBrowser Main component render with basic parameters 1`] = `
<div
  className="problem-browser"
>
  <span
    className={
      Array [
        "problem-selector",
      ]
    }
    onClick={[Function]}
  >
    <span>
      Select a section or problem
    </span>
    <span
      className={
        Array [
          "pull-right",
        ]
      }
    >
      <div>
        <span
          aria-hidden={true}
          className="fa fa-sort"
          id="Icon2"
        />
      </div>
    </span>
  </span>
  <input
    disabled={true}
    name="problem-location"
    style={
      Object {
        "display": "none",
      }
    }
    type="text"
    value={null}
  />
</div>
`;

exports[`ProblemBrowser Main component render with selected block 1`] = `
<div
  className="problem-browser"
>
  <span
    className={
      Array [
        "problem-selector",
      ]
    }
    onClick={[Function]}
  >
    <span>
      some-selected-block
    </span>
    <span
      className={
        Array [
          "pull-right",
        ]
      }
    >
      <div>
        <span
          aria-hidden={true}
          className="fa fa-sort"
          id="Icon2"
        />
      </div>
    </span>
  </span>
  <input
    disabled={true}
    name="problem-location"
    style={
      Object {
        "display": "none",
      }
    }
    type="text"
    value="some-selected-block"
  />
</div>
`;
